need to finish run list and api docs
run list: filters status not working, neither is display mode
