# docs/api.yaml
@@ -42,7 +42,7 @@ paths:
         - Users
       responses:
         200:
-          description: An array of users
+          description: A user
           schema:
             $ref: '#/definitions/User'
         default:
@@ -51,6 +51,41 @@ paths:
             $ref: '#/definitions/Error'
 
   /runs:
+    post:
+      summary:
+      description:
+      parameters:
+        - name: name
+          required: true
+          in: body
+          type: string
+        - name: waypoints
+          required: false
+          type: array
+          description: Array of waypoint NAMES ["Somewhere","Over","The","Rainbow"]. If a waypoint doesn'0t exist, it will be create
+          items:
+            type: string
+        - name: subscriptions
+          required: false
+          description:
+            Array of subscriptions.
+            If provided with existing subscriptions, they will be updated.
+            ["car":2,"user":5] or
+            ["id":1, "car":2, "user":null]
+            None of the fields are required. If nothing is put in a subscription this basicly tells the run it must have 2 convoys, but that is it
+          type: array
+          items:
+            $ref: '#/definitions/RunSubscriptionInsert'
+      responses:
+        200:
+          description: The newly created run
+          schema:
+            $ref: '#/definitions/Run'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
     get:
       summary: User Types
       description:
@@ -68,18 +103,11 @@ paths:
           required: false
           type: string
 
-        # - name: between
-        #   in: query
-        #   description:
-        #     Allows querying between time periods. Comma seperated values.
-        #     MAX 2 allowed
-        #     /runs?between=2017-06-08,2017-06-09
-        #   required: false
-        #   type: array
-        #   items:
-        #     type: date
-        #   collectionFormat: csv
-        #   maxItems: 2
+        - name: between
+          in: query
+          description: "Allows querying between time periods. Comma seperated values. MAX 2 allowed /runs?between=2017-06-08,2017-06-09"
+          required: false
+          type: string
 
         - name: actif
           in: query
@@ -95,9 +123,6 @@ paths:
           description: "Filters all the runs that are finished /runs?finished=true"
       tags:
         - Runs
-        - Users
-        - Geocoders
-        - Vehicles
       responses:
         200:
           description: An array of runs
@@ -123,9 +148,6 @@ paths:
           type: number
       tags:
         - Runs
-        - Users
-        - Geocoders
-        - Vehicles
       responses:
         200:
           description: An array of runs
@@ -179,9 +201,6 @@ paths:
           type: number
       tags:
         - Runs
-        - Users
-        - Geocoders
-        - Vehicles
       responses:
         200:
           description: Run object with the start_at filled
@@ -211,9 +230,6 @@ paths:
             $ref: "#/definitions/Runners"
       tags:
         - Runs
-        - Users
-        - Geocoders
-        - Vehicles
       responses:
         200:
           description: An array of runs
@@ -237,17 +253,17 @@ paths:
           description: Unique identifier of the runner
           required: true
           type: number
+
+        - name: status
+          in: query
+          description: "Allows you to filter vehicles"
+          required: true
+          type: string
           enum:
            - free
            - taken
-        - name: status
-          in: query
-          description: "Allows you filter vehicles"
-          required: true
-          type: string
       tags:
        - Runners
-       - Vehicles
       responses:
         200:
           description: An array of vehicles
@@ -259,7 +275,75 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /cars:
+    post:
+      summary: Create a new car
+      description:  Create a car. You can easily create a car with only a car_type, if needed.
+      tags:
+        - Vehicles
+      parameters:
+        - name: plate_number
+          in: body
+          description: THe plate number of the car. A validation error will be thrown if plate number alredy exist in db.
+          required: false
+          type: string
+        - name: brand
+          in: body
+          required: false
+          description: Brand of the car
+          type: string
+        - name: model
+          in: body
+          required: false
+          description: Model of the car
+          type: string
+        - name: car_type
+          in: body
+          required: true
+          type: number
+          description: Car type identifier. Only required field.
+        - name: nb_place
+          in: body
+          required: false
+          description: Number of seats available in car. If nothing is provided, will take number of seats of car.
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/Vehicle'
 
+    get:
+      summary: Vehicles Types
+      description:
+        List all vehicles
+      parameters:
+        - name: status
+          in: query
+          description: "Allows you to retrieve a list of vehicles according to their status : [taken, free]. /vehicles?status=taken"
+          required: false
+          type: string
+        - name: type
+          in: query
+          description: "Allows you to retrieve a list of vehicles according to type such as : [Vito, Limo]. /vehicles?staus=taken&type=Limo"
+          required: false
+          type: string
+        - name: include
+          in: query
+          description: "Add user object if the vehicle is taken : /vehicles?include=user"
+          type: string
+      tags:
+        - Vehicles
+      responses:
+        200:
+          description: An array of vehicles
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Vehicle'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /vehicles:
     get:
       summary: Vehicles Types
@@ -281,9 +365,6 @@ paths:
           description: "Add user object if the vehicle is taken : /vehicles?include=user"
           type: string
       tags:
-        - Runs
-        - Users
-        - Geocoders
         - Vehicles
       responses:
         200:
@@ -304,9 +385,7 @@ paths:
         List all vehicles with them status
         This method is use in actual runners mobile application but you should remove it and use /vehicles instead
       tags:
-       - VehicleStatus
-       - Vehicles
-       - Users
+       - Status
       responses:
         200:
           description: An array of status of vehicles
@@ -323,6 +402,8 @@ paths:
     get:
       summary: Return all the groups
       description: Return all the groups
+      tags:
+        - Groups
       responses:
         200:
           description: An array of groups
@@ -345,7 +426,6 @@ paths:
           description: Unique identifier of the run
           required: true
           type: number
-
         - name: user
           in: body
           description:
@@ -353,6 +433,8 @@ paths:
           required: false
           schema:
             type: string
+      tags:
+        - Groups
       responses:
         200:
           description: The modified group
@@ -397,9 +479,11 @@ definitions:
       start_time:
         description: start of schedule (date time)
         type: string
+        format: date-time
       end_time:
         description: end of schedule (date time)
         type: string
+        format: date-time
   Group:
     type: object
     properties:
@@ -450,8 +534,8 @@ definitions:
       nb_place:
         description: Number of places available in the car (driver's place is excluded)
         type: integer
-      user:
-        $ref: '#/definitions/User'
+      # user:
+      #   $ref: '#/definitions/User'
   User:
     type: object
     properties:
@@ -525,6 +609,8 @@ definitions:
   Runners:
     type: object
     properties:
+      id:
+        type: string
       user:
         $ref: '#/definitions/User'
       vehicle_category:
@@ -532,8 +618,21 @@ definitions:
       vehicle:
         $ref: '#/definitions/Vehicle'
 
-
-
+  RunSubscriptionInsert:
+    ẗype: object
+    properties:
+      id:
+        type: number
+        description: Unique identifier (ID)
+      car:
+        type: number
+        description: car id
+      user:
+        type: number
+        description: user id
+      car_type:
+        type: number
+        description: car type id
 # Google Map API
   Geocoder:
     type: object
